# SpartialDB_core

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  LICENSE.md  MANIFEST.in  README.md  api_smoke_profile.csv  api_smoke_stats.csv  build.sh  check_physx.ps1  clean_and_build.ps1  combined_point_cloud.las  coveragerc  elevation_profile.csv  gis_terrain.py  lidar_medical.py  lidar_medical_stats.csv  proj_check_profile.csv  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run.ps1  terrain_profile.csv
.github/workflows/: linux-build-test.yml  windows-build-test.yml
docs/specs/: 2026-06-15-real-cpp-core-design.md
include/: BVHManager.hpp  CoordinateConverter.hpp  PhysXCore.hpp  ScenePool.hpp  SpatialDB.hpp  Voxelizer.hpp
python/: __init__.py  setup.py
python/spatial_db/: __init__.py  core.py
python/spatial_db/examples/: api_smoke.py  benchmark.py  proj_check.py  terrain_analysis.py  visualization.py
src/: BVHManager.cpp  CoordinateConverter.cpp  PhysXCore.cpp  ScenePool.cpp  SpatialDB.cpp  Voxelizer.cpp  pybind_module.cpp
tests/: conftest.py  test_spatialdb.py
